--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"simplebar": "^6.2.5"
+	}
 }
