--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
 	"name": "svelte-bird",
 	"version": "0.0.1",
 	"scripts": {
+		"build-tailwind": "tailwindcss -o src/lib/css/svelte-bird.min.css --minify",
 		"dev": "vite dev",
-		"build": "vite build && npm run package",
+		"build": "npm run build-tailwind && vite build && npm run package",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package",
