--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-bird",
-	"version": "0.0.4",
+	"version": "0.0.10",
 	"description": "svelte-bird is a Svelte/Sveltekit admin template.",
 	"repository": {
 		"type": "git",
@@ -41,6 +41,18 @@
 		"./dist/css/*.css": {
 			"import": "./dist/css/*.css",
 			"require": "./dist/css/*.css"
+		},
+		"./dist/components": {
+			"types": "./dist/components/index.d.ts",
+			"svelte": "./dist/components/index.js"
+		},
+		"./dist/types": {
+			"types": "./dist/types/index.d.ts",
+			"svelte": "./dist/types/index.js"
+		},
+		"./dist/stores": {
+			"types": "./dist/stores/index.d.ts",
+			"svelte": "./dist/stores/index.js"
 		}
 	},
 	"files": [
