--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
 		"./dist/stores": {
 			"types": "./dist/stores/index.d.ts",
 			"svelte": "./dist/stores/index.js"
+		},
+		"./dist/functions": {
+			"types": "./dist/functions/index.d.ts",
+			"svelte": "./dist/functions/index.js"
 		}
 	},
 	"files": [
