--- a/package.json
+++ b/package.json
@@ -91,7 +91,5 @@
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
-	"dependencies": {
-		"simplebar": "^6.2.5"
-	}
+	"dependencies": {}
 }
