--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
 	"author": "Joaquim Henriques <joaquim.neto.cel@gmail.com>",
 	"license": "ISC",
 	"scripts": {
+		"build-tailwind": "tailwindcss -o src/lib/css/svelte-bird.min.css --minify",
 		"dev": "vite dev",
-		"build": "vite build && npm run package",
+		"build": "npm run build-tailwind && vite build && npm run package",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package",
