--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "svelte-bird is a Svelte/Sveltekit admin template.",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/joaquimnetocel/svelte-bird"
+		"url": "git+https://github.com/joaquimnetocel/svelte-bird.git"
 	},
 	"bugs": {
 		"url": "https://github.com/joaquimnetocel/svelte-bird/issues"
@@ -50,10 +50,6 @@
 			"types": "./dist/types/index.d.ts",
 			"svelte": "./dist/types/index.js"
 		},
-		"./dist/stores": {
-			"types": "./dist/stores/index.d.ts",
-			"svelte": "./dist/stores/index.js"
-		},
 		"./dist/functions": {
 			"types": "./dist/functions/index.d.ts",
 			"svelte": "./dist/functions/index.js"
@@ -65,6 +61,7 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
+		"@sveltejs/kit": "^2.0.0",
 		"svelte": "^5.0.0-next.1"
 	},
 	"devDependencies": {
@@ -91,5 +88,8 @@
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"esm-env": "^1.0.0"
+	}
 }
