--- a/package.json
+++ b/package.json
@@ -1,9 +1,30 @@
 {
 	"name": "svelte-bird",
-	"version": "0.0.1",
+	"version": "1.0.5",
+	"description": "svelte-bird is a Svelte/Sveltekit admin template.",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/joaquimnetocel/svelte-bird.git"
+	},
+	"bugs": {
+		"url": "https://github.com/joaquimnetocel/svelte-bird/issues"
+	},
+	"keywords": [
+		"admin",
+		"admin-template",
+		"svelte",
+		"sveltejs",
+		"sveltekit",
+		"template",
+		"tailwind",
+		"tailwindcss"
+	],
+	"author": "Joaquim Henriques <joaquim.neto.cel@gmail.com>",
+	"license": "ISC",
 	"scripts": {
+		"build-tailwind": "npx @tailwindcss/cli -o src/lib/css/svelte-bird.min.css --minify",
 		"dev": "vite dev",
-		"build": "vite build && npm run prepack",
+		"build": "npm run build-tailwind && vite build && npm run prepack",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"prepack": "svelte-kit sync && svelte-package && publint",
@@ -54,8 +75,5 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
-	},
-	"keywords": [
-		"svelte"
-	]
+	}
 }
