--- a/package.json
+++ b/package.json
@@ -48,6 +48,22 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"svelte": "./dist/index.js"
+		},
+		"./dist/css/*.css": {
+			"import": "./dist/css/*.css",
+			"require": "./dist/css/*.css"
+		},
+		"./dist/components": {
+			"types": "./dist/components/index.d.ts",
+			"svelte": "./dist/components/index.js"
+		},
+		"./dist/types": {
+			"types": "./dist/types/index.d.ts",
+			"svelte": "./dist/types/index.js"
+		},
+		"./dist/functions": {
+			"types": "./dist/functions/index.d.ts",
+			"svelte": "./dist/functions/index.js"
 		}
 	},
 	"peerDependencies": {
